# ChowTunes

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: nightly.yml
cmake/: CMakeRC.cmake  FindFFMPEG.cmake
res/: CMakeLists.txt
src/: main.cpp  main_component.cpp  main_component.h  state.cpp  state.h  taglib_config.h
src/audio/: audio_file_reader_ffmpeg.h  audio_player.cpp  audio_player.h  audio_player_actions.cpp  audio_player_actions.h
src/gui/: command_line.cpp  command_line.h  gui_resources.h  hotkey_handler.cpp  hotkey_handler.h  list_selector.h  play_queue_view.cpp  play_queue_view.h  transport_view.cpp  transport_view.h
src/gui/search/: fuzzy_search_database.h  search_view.cpp  search_view.h
src/gui/transport/: transport_timeline.cpp  transport_timeline.h  transport_view.cpp  transport_view.h
src/play_queue/: play_queue.cpp  play_queue.h
